<resources>
    <string name="app_name">P(7)</string>
    <string name="action_settings">Settings</string>
    <!-- MainActivity -->
    <string name="app_logo">app logo</string>
    <string name="single_player_button">Single Player</string>
    <string name="multiplayer_button">Multiplayer </string>
    <string name="highest_scores_button">Highest Scores</string>
    <string name="settings_button">Settings</string>
    <string name="rules_button">Rules</string>
    <!-- RulesActivity -->
    <string name="rules">
        The goal of this game is collecting sets of four cards in shortest time possible.
        Each card represents a unique set of colors (hence, there are 128 cards).
        Four cards are a valid set if every color appears on an even number of these.
        (In other words, if the symmetric sum (xor) of these four sets is empty).
        If you are not very familiar with the concept of symmetric sum, feel free to experiment:
    </string>
    <string name="xor">The xor of these is:</string>
    <string name="notaset">Not a set</string>
    <!-- SettingsActivity -->
    <string name="high_contrast">High Contrast</string>
    <string name="pastel">Pastel</string>
    <string name="autumn">Autumn</string>
    <!-- SinglePlayerActivity -->
    <string name="paused">Paused</string>
    <string name="resume">Resume</string>
    <!-- SinglePlayerFinishActivity -->
    <string name="home">home</string>
    <!-- HighestScoresActivity -->
    <string name="header1">You have spent</string>
    <string name="footer1">minutes playing P7</string>
    <string name="header2">In this time</string>
    <string name="footer2">sets were collected</string>
    <string name="best_games">Best games</string>
    <string name="switch_to_p6">Switch to P(6)</string>
    <string name="switch_to_p7">Switch to P(7)</string>
    <!-- MultiplayerActivity -->
    <string name="type_your_name">Type your name</string>
    <string name="start">Start!</string>
    <string name="confirm">confirm</string>
    <string name="rematch">Rematch</string>
</resources>
