<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HighestScoresActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/toolbar_highest_scores"
        layout="@layout/toolbar" />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:orientation="horizontal" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" >
            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header1" />
            <TextView
                android:gravity="center"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_spent_playing" />
            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/footer1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" >
            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header2" />
            <TextView
                android:gravity="center"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sets_collected" />
            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/footer2" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="20sp"
        android:text="@string/bestGames"
        android:gravity="center" />

    <include
        android:id="@+id/headers"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        layout="@layout/result_row" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewP7"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewP6"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/game_mode_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:textOn="Switch to P(6)"
        android:textOff="Switch to P(7)" />

</LinearLayout>
